<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/camera_container">

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="640dp"
        android:layout_height="480dp"
        android:layout_centerInParent="true"
        app:scaleType="fillStart"
        android:layout_above="@+id/button_unlock"
        android:layout_marginBottom="-300dp"/>

    <ru.lezchook.gestureapplocker.view.GestureAnalyzer
        android:id="@+id/gestureAnalyzer"
        android:layout_width="640dp"
        android:layout_height="480dp"
        android:layout_centerInParent="true"
        android:layout_above="@+id/button_unlock"
        android:layout_marginBottom="-300dp" />

    <Button
        android:id="@+id/button_unlock"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/unlock"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/button_block"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_unlock"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/lock" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@id/button_block"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="48dp">
    </TextView>

    <Button
        android:id="@+id/button_load_model"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/load_model"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/status_text"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/buttonWriteCode"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_code"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_load_model"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/buttonGenerateCode"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/create_code"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/buttonWriteCode"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/buttonResetApps"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_apps"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/buttonGenerateCode"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>


</RelativeLayout>